added more screens

--- a/app.json
+++ b/app.json
@@ -16,7 +16,8 @@
         "foregroundImage": "",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.anonymous.spark"
     },
     "web": {
       "bundler": "metro",
